@@ -61,6 +61,15 @@
     <template name="evt_entry_OnFileChanged">EVT_FILEPICKER_CHANGED( $id, #handler )</template>
   </templates>
 
+  <templates class="wxDirPickerCtrl">
+    <template name="declaration">#class* $name;</template>
+    <template name="construction">
+	   $name = new #class( #wxparent $name, $id, $value, $message, $pos, $size, $style #ifnotnull $window_style @{ |$window_style @} );
+    </template>
+    <template name="include">@#include &lt;wx/filepicker.h&gt;</template>
+    <template name="evt_entry_OnDirChanged">EVT_DIRPICKER_CHANGED( $id, #handler )</template>
+  </templates>
+
   <templates class="wxHtmlWindow">
     <template name="declaration">#class* $name;</template>
     <template name="construction">$name = new #class( #wxparent $name, $id, $pos, $size, $style #ifnotnull $window_style @{ |$window_style @});</template>
